GeeCON 2024 update